--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(gx_list_history_datasets)
 export(gx_put)
 export(gx_restore)
 export(gx_save)
+export(gx_set_import_directory)
 export(gx_set_tmp_directory)
 export(gx_show_dataset)
 export(gx_switch_history)
