--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,11 +5,14 @@ Encoding: UTF-8
 Version: 0.3
 Date: 2015-09-28
 Author: Jelle Scholtalbers
-Maintainer: Jelle Scholtalbers <scholtal@embl.de>
-Description: Provides functions to interact with a Galaxy instance, e.g. get or put datasets from and to Galaxy.
-  Based on the work by Eric Rasche and Björn Gruening.
+Maintainer: Adrian Zetner <adrian.zetner@canada.ca>
+Description: Based on Jelle Scholtalbers GalaxyConnector. Provides functions to interact with a Galaxy instance, e.g. get or put datasets from and to Galaxy.
+  Extended to work with Galaxy collections.
 License: GPL (>= 2)
 LazyData: TRUE
-Imports: stringr, RCurl, jsonlite
+Imports: 
+  RCurl, 
+  jsonlite, 
+  utils
 Depends: R (>= 3.2)
 RoxygenNote: 6.1.1
